SERVER-70256 Protect ClusterCursorManager::_cursorsTimeOut from data race