src/mongo/s/query/cluster_cursor_cleanup_job.cpp
@@ -62,8 +62,7 @@ void ClusterCursorCleanupJob::run() {
         Date_t cutoff = (cursorTimeoutValue > 0)
             ? (Date_t::now() - Milliseconds(cursorTimeoutValue))
             : Date_t::now();
-        manager->incrementCursorsTimedOut(
-            manager->killMortalCursorsInactiveSince(opCtx.get(), cutoff));
+        manager->killMortalCursorsInactiveSince(opCtx.get(), cutoff);
 
         MONGO_IDLE_THREAD_BLOCK;
         sleepsecs(getClientCursorMonitorFrequencySecs());
